bugfix: fix the cutoff of the radial gradient of the Hero section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
       background-position: -100% 25%;
     }
     25% {
-      background-position: 15% 120%;
+      background-position: 30% 200%;
     }
     45% {
       background-position: 85% 5%;
